<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="projectDetailViewModel"
            type="com.example.stagemanager.projectdetail.ProjectDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/project_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/project_id"
            app:layout_constraintBottom_toTopOf="@+id/project_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:text="@{projectDetailViewModel.project.name}"
            app:layout_constraintBottom_toTopOf="@+id/project_music_piece"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_id" />

        <TextView
            android:id="@+id/project_music_piece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/music_piece"
            android:text="@{projectDetailViewModel.project.songUsed}"
            app:layout_constraintBottom_toTopOf="@+id/project_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_name" />

        <TextView
            android:id="@+id/project_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/deadline"
            android:text="@{projectDetailViewModel.project.deadline}"
            app:layout_constraintBottom_toTopOf="@+id/project_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_music_piece" />

        <TextView
            android:id="@+id/project_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@{projectDetailViewModel.project.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_deadline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>